# english-books

./: .gitignore
.claude/commands/: bmad.md
backend/: .env.example  config.py  main.py  pyproject.toml
backend/data/: english_app.db
backend/db/: session.py
backend/models/: database.py  schemas.py
backend/services/: ml_api.py  ml_base.py  ml_factory.py  ml_local.py
bmad/.gemini/commands/: bmad-agent-bmm-analyst.toml  bmad-agent-bmm-architect.toml  bmad-agent-bmm-dev.toml  bmad-agent-bmm-pm.toml  bmad-agent-bmm-sm.toml  bmad-agent-bmm-tea.toml  bmad-agent-bmm-ux-designer.toml  bmad-agent-core-bmad-master.toml  bmad-task-bmm-daily-standup.toml  bmad-task-bmm-retrospective.toml  bmad-task-core-adv-elicit.toml  bmad-task-core-index-docs.toml  bmad-task-core-validate-workflow.toml  bmad-task-core-workflow.toml
bmad/bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmad/bmm/: config.yaml
bmad/bmad/core/: config.yaml
docs/: app-showcase-interactive.html  architecture.md  brainstorming-session-results-2025-11-02.md  epics.md  sprint-status.yaml  tech-spec-epic-1-backend.md  tech-spec-epic-1-frontend.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md
docs/stories/: 1-1-library-screen-with-book-grid.md
frontend/: .watchmanconfig  App.tsx  EMFILE-FIX.md  app.json  fix-file-watchers.sh  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/components/: BookCard.tsx  ContinueReadingCard.tsx
frontend/src/hooks/: useBooks.ts
scripts/: seed_lessons.py  setup_db.py
(+7 files in other folders)
